tdf#170067 SwNavigator: Unprotect section needs to ask for set password

Makes unprotecting password protected sections from the Navigator
Sections entries popup menu show the password dialog for password entry
match before unprotect can be done.

Change-Id: I1178a2254616a32ad33f6974071885e3021d1dcf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196040
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200844
Reviewed-by: Stephan Bergmann <stephan.bergmann@collabora.com>