sw/source/uibase/utlui/content.cxx
@@ -130,6 +130,9 @@
 
 #include <rootfrm.hxx>
 
+#include <sfx2/passwd.hxx>
+#include <svl/PasswordHelper.hxx>
+
 #define CTYPE_CNT   0
 #define CTYPE_CTT   1
 
@@ -5857,11 +5860,38 @@ void SwContentTree::ExecuteContextMenuAction(const OUString& rSelectedPopupEntry
         SwSection* pSection = pSectionFormat->GetSection();
         SwSectionData aSectionData(*pSection);
         if (rSelectedPopupEntry == "protectsection")
-            aSectionData.SetProtectFlag(!pSection->IsProtect());
+        {
+            if (pSection->GetPassword().hasElements())
+            {
+                SfxPasswordDialog aPasswordDlg(m_pDialog->GetFrameWeld());
+                if (aPasswordDlg.run())
+                {
+                    if (SvPasswordHelper::CompareHashPassword(aSectionData.GetPassword(),
+                                                              aPasswordDlg.GetPassword()))
+                    {
+                        aSectionData.SetProtectFlag(!aSectionData.IsProtectFlag());
+                        if (!aSectionData.IsProtectFlag())
+                            aSectionData.SetPassword(uno::Sequence<sal_Int8 >());
+                    }
+                    else
+                    {
+                        std::unique_ptr<weld::MessageDialog> xInfoBox(
+                            Application::CreateMessageDialog(
+                                m_pDialog->GetFrameWeld(), VclMessageType::Info, VclButtonsType::Ok,
+                                SwResId(STR_WRONG_PASSWORD)));
+                        xInfoBox->run();
+                    }
+                }
+            }
+            else
+                aSectionData.SetProtectFlag(!aSectionData.IsProtectFlag());
+        }
         else
             aSectionData.SetHidden(!pSection->IsHidden());
         m_pActiveShell->UpdateSection(m_pActiveShell->GetSectionFormatPos(*pSectionFormat),
                                       aSectionData);
+        Display(true);
+        return;
     }
     else if (rSelectedPopupEntry == "sort")
     {
